--- a/template/src/assets/styles/sidebar.scss
+++ b/template/src/assets/styles/sidebar.scss
@@ -55,7 +55,7 @@
       overflow: hidden;
     }
 
-    .svg-icon {
+    .icon {
       margin-right: 16px;
     }
 
@@ -97,7 +97,7 @@
       margin-left: 54px;
     }
 
-    .svg-icon {
+    .icon {
       margin-right: 0px;
     }
 
@@ -108,7 +108,7 @@
       .el-tooltip {
         padding: 0 !important;
 
-        .svg-icon {
+        .icon {
           margin-left: 20px;
         }
       }
@@ -120,7 +120,7 @@
       &>.el-submenu__title {
         padding: 0 !important;
 
-        .svg-icon {
+        .icon {
           margin-left: 20px;
         }
 
@@ -181,7 +181,7 @@
 // when menu collapsed
 .el-menu--vertical {
   &>.el-menu {
-    .svg-icon {
+    .icon {
       margin-right: 16px;
     }
   }
