--- a/template/src/assets/styles/variables.scss
+++ b/template/src/assets/styles/variables.scss
@@ -9,9 +9,9 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 //sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
+$menuText: #bfcbd9;
+$menuActiveText: #42b983; // #409EFF;
+$subMenuActiveText: #f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#304156;
 $menuHover:#263445;
